k8s/05-seedbox/01-namespace/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seedbox
  labels:
    app.kubernetes.io/name: seedbox
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/component: all
